gitTestProject/src/objects/Schedule__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cron_id__c</fullName>
        <label>cron id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Schedule</label>
    <nameField>
        <label>schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>